crates/varyk/tests/snapshots/errors__v0402_target_path.snap
---
source: crates/varyk/tests/errors.rs
expression: stderr
---
error[V0402]: the `path` of `[[bin]]` must be `src/main.vr`
 --> crates/varyk/tests/fixtures/errors/v0402_target_path/Cargo.toml:8:8
  |
8 | path = "src/app.rs"
  |        ^^^^^^^^^^^^ the `path` of `[[bin]]` must be `src/main.vr`
  |
  = note: a Varyk package is one program from `src/main.vr` or one library from `src/lib.vr`; the only target table it may have is the one that names that root: `[[bin]]` with `name = "app"` and `path = "src/main.vr"`
