crates/varyk/tests/snapshots/errors__v0404_app_without_std.snap
---
source: crates/varyk/tests/errors.rs
expression: without_version(& stderr)
---
error[V0404]: this program needs `varyk-std`, which `Cargo.toml` does not list
  --> Cargo.toml:10:2
   |
10 | [dependencies]
   |  ^^^^^^^^^^^^ this program needs `varyk-std`, which `Cargo.toml` does not list
   |
   = note: write `varyk-std = "[version]"` under `[dependencies]` in `Cargo.toml`
