crates/varyk/tests/snapshots/errors__v0404_program_without_std_for_a_logging_package.snap
---
source: crates/varyk/tests/errors.rs
expression: without_version(& stderr)
---
error[V0404]: this program needs `varyk-std`, which `Cargo.toml` does not list
  --> Cargo.toml:10:2
   |
10 | [dependencies]
   |  ^^^^^^^^^^^^ this program needs `varyk-std`, which `Cargo.toml` does not list
   |
   = note: write `varyk-std = "[version]"` under `[dependencies]` in `Cargo.toml`
   = note: the package `units` writes log lines, which need it
