crates/varyk/tests/snapshots/errors__v0404_std_missing.snap
---
source: crates/varyk/tests/errors.rs
expression: without_version(& stderr)
---
error[V0404]: this program needs `varyk-std`, which `Cargo.toml` does not list
 --> crates/varyk/tests/fixtures/errors/v0404_std_missing/Cargo.toml:6:2
  |
6 | [dependencies]
  |  ^^^^^^^^^^^^ this program needs `varyk-std`, which `Cargo.toml` does not list
  |
  = note: write `varyk-std = "[version]"` under `[dependencies]` in `Cargo.toml`
